# mutualfundsanalysis

./: .gitattributes  .gitignore  README.md  generate_inference_shift_matrix_pdf.py  pyproject.toml  requirements.txt  run_ensemble_validation.py  run_final_evaluation.py  run_pipeline.py  run_tests.py
config/: config.yaml
data/: README.md
docs/: audit_findings_pca_reconciliation.md  data_ingestion_protocol.md  linux_migration_report.md
src/mutual_fund_ml/: __init__.py  clustering.py  config.py  data_loading.py  data_validation.py  evaluation.py  feature_engineering.py  interpretation.py  linear_models.py  panel_diagnostics.py  pca.py  preprocessing.py  reporting.py  tree_models.py  utils.py  visualization.py
tests/: test_data_ingestion_guard.py  test_data_validation.py  test_leakage.py  test_models.py  test_pipeline.py  test_preprocessing.py
