[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutual_fund_ml"
version = "0.1.0"
description = "A reproducible, modular machine learning project for mutual fund performance analysis."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "joblib>=1.2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mutual_fund_ml*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
